# stickers_writer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  INSTALL.txt  Makefile  README.md  cmake_install.cmake  set_dpi.sh
fonts/: Heda.sfd
src/: hrcode_constants.h  main.cpp  small_hrcode_constants.h  small_sticker.cpp
